# TienHiep-TTS

./: LICENSE  README.md  README_HF.md  app.py  inference.py  pyproject.toml  requirements.txt
viterbox/: __init__.py  tts.py
viterbox/models/: __init__.py
viterbox/models/s3gen/: s3gen.py
viterbox/models/t3/: __init__.py
viterbox/models/t3/modules/: perceiver.py  t3_config.py
viterbox/models/tokenizers/: __init__.py  tokenizer.py
