[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viterbox"
version = "1.0.0"
description = "Vietnamese Text-to-Speech based on Chatterbox"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "Dolly VN - ContextBoxAI"}
]
keywords = ["tts", "text-to-speech", "vietnamese", "voice-cloning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy>=1.24.0,<1.26.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "transformers==4.46.3",
    "diffusers==0.29.0",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
    "gradio==5.44.1",
    "soe-vinorm>=0.3.2",
    "huggingface_hub>=0.20.0",
    "einops>=0.7.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
ui = ["gradio>=4.0.0"]

[project.scripts]
viterbox = "inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["viterbox*"]
